// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shared/ButtonWithPanel opens the panel when the button is clicked and closes the panel by clicking outside the panel 1`] = `
<div
  class="buttonWithPanel button open"
>
  <input
    class="buttonWithPanelButton buttonButton"
    type="button"
    value="My Button"
  />
  <div
    class="arrowPanelAnchor"
  >
    <div
      class="arrowPanel open panel"
    >
      <div
        class="arrowPanelArrow"
      />
      <div
        class="arrowPanelContent"
      >
        <div>
          Panel content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shared/ButtonWithPanel opens the panel when the button is clicked and closes the panel by clicking outside the panel 2`] = `
<div
  class="buttonWithPanel button"
>
  <input
    class="buttonWithPanelButton buttonButton"
    type="button"
    value="My Button"
  />
  <div
    class="arrowPanelAnchor"
  >
    <div
      class="arrowPanel panel"
    >
      <div
        class="arrowPanelArrow"
      />
      <div
        class="arrowPanelContent"
      >
        <div>
          Panel content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shared/ButtonWithPanel opens the panel when the button is clicked and closes the panel when the escape key is pressed 1`] = `
<div
  class="buttonWithPanel button open"
>
  <input
    class="buttonWithPanelButton buttonButton"
    type="button"
    value="My Button"
  />
  <div
    class="arrowPanelAnchor"
  >
    <div
      class="arrowPanel open panel"
    >
      <div
        class="arrowPanelArrow"
      />
      <div
        class="arrowPanelContent"
      >
        <div>
          Panel content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shared/ButtonWithPanel opens the panel when the button is clicked and closes the panel when the escape key is pressed 2`] = `
<div
  class="buttonWithPanel button"
>
  <input
    class="buttonWithPanelButton buttonButton"
    type="button"
    value="My Button"
  />
  <div
    class="arrowPanelAnchor"
  >
    <div
      class="arrowPanel panel"
    >
      <div
        class="arrowPanelArrow"
      />
      <div
        class="arrowPanelContent"
      >
        <div>
          Panel content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shared/ButtonWithPanel renders a button with a panel 1`] = `
<div
  class="buttonWithPanel button open"
>
  <input
    class="buttonWithPanelButton"
    type="button"
    value="My Button"
  />
  <div
    class="arrowPanelAnchor"
  >
    <div
      class="arrowPanel open panel"
    >
      <div
        class="arrowPanelArrow"
      />
      <div
        class="arrowPanelContent"
      >
        <div>
          Panel content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shared/ButtonWithPanel renders the ButtonWithPanel with a closed panel 1`] = `
<div
  class="buttonWithPanel button"
>
  <input
    class="buttonWithPanelButton buttonButton"
    type="button"
    value="My Button"
  />
</div>
`;
